tests/expectations/parser-expression/expression/binary/neq_fail.out
Error [EPAR0370017]: Could not parse the implicit value: 1.
    --> test_0:1:1
     |
   1 | 1 != 2 != 3
     | ^


